# QueryCase

./: .gitignore  README.md  pdftjson.py  pyproject.toml
QueryCase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: checkpoint.json  faiss_index.index  metadata.json
querycase/: app.py  config.py  embed.py  fetch.py  index.py  summarizer.py  update.py
